[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0", "wheel"]

# [tool.setuptools]
# packages = ["hyo2.qax"]
[tool.distutils.bdist_wheel]
universal = true

[project]
name = "hyo2.qax"
dynamic = [
    "version",
    "description",
    "dependencies",
    "gui-scripts",
    "classifiers",
    "optional-dependencies",
    "keywords",
    "authors",
    "license",
    "readme",
    "requires-python",
]

[tool.setuptools_scm]
write_to = "hyo2/qax/_version.py"
version_scheme = "no-guess-dev"
